<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ChangeActivity">

    <View
        android:id="@+id/lineOverChange"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/black" />

    <View
        android:id="@+id/changeAnchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/controlButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeAnchor"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backManageButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_custom"
            android:drawableStart="@drawable/image_back_arrow"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/infosButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_custom"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/infos" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sampleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/saveButton"
        android:layout_below="@id/controlButtons"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/layout_sample">


        <TextView
            android:id="@+id/fileNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:labelFor="@+id/fileName"
            android:text="@string/title" />

        <EditText
            android:id="@id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fileNameTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:inputType="text"
            android:minWidth="130dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/filePathTitle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/fileName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/file" />

        <TextView
            android:id="@+id/filePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filePathTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxHeight="100dp" />

        <Button
            android:id="@+id/fileBrowse"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/filePath"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:text="@string/browse" />

        <Button
            android:id="@+id/fileTest"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/fileBrowse"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:text="@string/test" />

        <Button
            android:id="@+id/fileDefault"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/fileTest"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:text="@string/reinit" />

    </RelativeLayout>

    <Button
        android:id="@id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_custom"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/save" />

</RelativeLayout>