<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.MainActivity">

    <View
        android:id="@+id/lineOverMain"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/black" />

    <Button
        android:id="@+id/manageButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/lineOverMain"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_custom"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/manage_samples" />

    <LinearLayout
        android:id="@+id/launchersGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/volumeControl"
        android:layout_below="@id/manageButton"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/samplePlay1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/samplePlay4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/samplePlay7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/samplePlay10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

            <ToggleButton
                android:id="@+id/samplePlay12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:checked="false"
                android:padding="10dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@id/volumeControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/volumeDown"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/volume_down"
            android:src="@drawable/volume_down" />

        <SeekBar
            android:id="@+id/volumeSeekbar"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="8" />

        <ImageView
            android:id="@+id/volumeUp"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/volume_up"
            android:src="@drawable/volume_up" />

    </LinearLayout>

</RelativeLayout>